--- a/Index_Template.html
+++ b/Index_Template.html
@@ -52,7 +52,7 @@
         </thead>
         <tbody>
             <tr>
-                <td>Team Member: First N: Last N: </td>
+                <td>Team Member: Carter Griffin </td>
 				<td>TBA</td>
              
             </tr>
@@ -65,7 +65,7 @@
         </tbody>
     </table>
 	 <footer>
-        <a href="demonstration.html">Here is my demonstration</a>
+        <a href="page2.html">Here is my demonstration</a>
     </footer>
 	
 </body>
