going to switch to master

--- a/page2.html
+++ b/page2.html
@@ -4,6 +4,9 @@
 
 <html>
     <body>
-        
+        <h1>Hello scary guy shows up on this page</h1>
+        <div class="campground">
+
+        </div>
     </body>
 </html>
