final commit for now

--- a/codingchallenge1/page2.html
+++ b/codingchallenge1/page2.html
@@ -4,5 +4,8 @@
 
 <body>
     hello
-    
+    <img id="michael" src="Assets/michael.gif" alt="Michael">
+    <img id="hiker" src="Assets/hiker2.png" alt="Hiker">
+    <img id="man" src="Assets/random-man.jpeg" alt="man">
+    <img id="james" src="Assets/James_Sunderland.png" alt="man">
 </body>
